--- a/book.tex
+++ b/book.tex
@@ -290,13 +290,14 @@ class that can be applied even if one chooses not to
 become a professional programmer.
 
 Students who find this book interesting and want to further explore
-probably should look at the {\em Think Python} book.  Because there
+should look at Allen B. Downey's {\em Think Python} book.  Because there
 is a lot of overlap between the two books,
 students will quickly pick up skills in the additional
-areas of computing in general which are covered in {\em Think Python}.
+areas of computing in general and computational thinking 
+that are covered in {\em Think Python}.
 And given that the books have a similar writing style and at times
 have identical text and examples, you should be 
-able to pick up these new topics with a minimum of effort.
+able to move quickly through {\em Think Python} with a minimum of effort.
 
 I feel that this book serves an example of why open 
 materials are so important to the future of education,
@@ -308,6 +309,7 @@ results of my efforts and I hope that you the reader are pleased with
 
 Charles Severance\\
 www.dr-chuck.com\\
+Ann Arbor, MI, USA\\
 July 25, 2011
 
 Charles Severance is a 
